##
## This file is part of Invenio.
## Copyright (C) 2011 CERN.
##
## Invenio is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 2 of the
## License, or (at your option) any later version.
##
## Invenio is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Invenio; if not, write to the Free Software Foundation, Inc.,
## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

imgdir=$(localstatedir)/www/img

img_DATA = bibauthorid.css bootstrap.min.css glyphicons-halflings.png glyphicons-halflings-white.png \
	   bibauthorid-help-full-image001.png \
	   bibauthorid-help-full-image003.png \
	   bibauthorid-help-full-image005.png \
	   bibauthorid-help-full-image007.png \
	   bibauthorid-help-full-image009.png \
	   bibauthorid-help-full-image011.png \
	   bibauthorid-help-full-image013.png \
	   bibauthorid-help-full-image015.png \
	   bibauthorid-help-full-image017.png \
	   bibauthorid-help-full-image019.png \
	   bibauthorid-help-full-image021.png \
	   bibauthorid-help-full-image023.png \
	   bibauthorid-help-full-image025.png \
	   bibauthorid-help-full-image027.png \
	   bibauthorid-help-full-image028.png \
	   bibauthorid-help-full-image029.png \
	   bibauthorid-help-full-image031.png \
	   bibauthorid-help-full-image033.png \
	   bibauthorid-help.html \
	   bibauthorid-help-small-image001.png \
	   bibauthorid-help-small-image003.png \
	   bibauthorid-help-small-image005.png \
	   bibauthorid-help-small-image007.png \
	   bibauthorid-help-small-image009.png \
	   bibauthorid-help-small-image011.png \
	   bibauthorid-help-small-image013.png \
	   bibauthorid-help-small-image015.png \
	   bibauthorid-help-small-image017.png \
	   bibauthorid-help-small-image019.png \
	   bibauthorid-help-small-image021.png \
	   bibauthorid-help-small-image023.png \
	   bibauthorid-help-small-image025.png \
	   bibauthorid-help-small-image027.png \
	   bibauthorid-help-small-image028.png \
	   bibauthorid-help-small-image029.png \
	   bibauthorid-help-small-image031.png \
	   bibauthorid-help-small-image033.png 

EXTRA_DIST = $(img_DATA)

CLEANFILES = *~ *.tmp

