##
## This file is part of Invenio.
## Copyright (C) 2011 CERN.
##
## Invenio is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 2 of the
## License, or (at your option) any later version.
##
## Invenio is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Invenio; if not, write to the Free Software Foundation, Inc.,
## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

imgdir=$(localstatedir)/www/img

img_DATA = bibauthorid.css bootstrap.min.css glyphicons-halflings.png glyphicons-halflings-white.png \
	   bai-help-colorschememapping.xml  bai-help-image001.png  bai-help-image003.png  bai-help-image005.png  bai-help-image007.png  bai-help-image009.png \
	   bai-help-filelist.xml bai-help-image002.png  bai-help-image004.png  bai-help-image006.png  bai-help-image008.png  bai-help-themedata.thmx \
	   bai-help.html 

EXTRA_DIST = $(img_DATA)

CLEANFILES = *~ *.tmp
