## This file is part of Invenio.
## Copyright (C) 2006, 2007, 2008, 2009, 2010, 2011, 2013 CERN.
##
## Invenio is free software; you can redistribute it and/or
## modify it under the terms of the GNU General Public License as
## published by the Free Software Foundation; either version 2 of the
## License, or (at your option) any later version.
##
## Invenio is distributed in the hope that it will be useful, but
## WITHOUT ANY WARRANTY; without even the implied warranty of
## MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the GNU
## General Public License for more details.
##
## You should have received a copy of the GNU General Public License
## along with Invenio; if not, write to the Free Software Foundation, Inc.,
## 59 Temple Place, Suite 330, Boston, MA 02111-1307, USA.

pylibdir = $(libdir)/python/invenio

pylib_DATA = bibclassify_acronym_analyzer.py \
             bibclassify_cli.py \
             bibclassify_config.py \
             bibclassify_daemon.py \
             bibclassify_engine.py \
             bibclassify_keyword_analyzer.py \
             bibclassify_regression_tests.py \
             bibclassify_ontology_reader.py \
             bibclassify_text_extractor.py \
             bibclassify_text_normalizer.py \
             bibclassify_microtests.py \
             bibclassify_templates.py \
             bibclassify_unit_tests.py \
             bibclassify_webinterface.py

EXTRA_DIST = $(pylib_DATA)

CLEANFILES = *~ *.tmp *.pyc
